[gd_scene load_steps=16 format=3 uid="uid://n7630g0ehwof"]

[ext_resource type="Script" uid="uid://b0dw3tatxpru6" path="res://scripts/dashing_enemy.gd" id="1_xc3d4"]
[ext_resource type="PackedScene" uid="uid://dlryu3u30yhb3" path="res://nodes/ui/DamageText.tscn" id="2_ijalk"]
[ext_resource type="Shader" uid="uid://caw6qgxxaapj4" path="res://shaders/color_blinking.gdshader" id="3_tc80p"]
[ext_resource type="Shader" uid="uid://b1cldd7wx5mnx" path="res://shaders/wave_death.gdshader" id="4_hlsnw"]
[ext_resource type="Theme" uid="uid://g8ijm1c5d00t" path="res://ui_theme.tres" id="5_ijalk"]
[ext_resource type="PackedScene" uid="uid://bwfxeyu3w3xo3" path="res://nodes/ui/EnemyHpBar.tscn" id="5_oqkmh"]
[ext_resource type="Texture2D" uid="uid://da4h3jou13i3f" path="res://assets/mindless_blob.png" id="6_ijalk"]
[ext_resource type="AudioStream" uid="uid://h8ogsv2e6qjq" path="res://assets/Shapeforms Audio Free Sound Effects/Hit and Punch Preview/HIT_METAL_WRENCH_HEAVIEST_02.wav" id="7_w8c1s"]
[ext_resource type="AudioStream" uid="uid://ba8ij1nyuc4mp" path="res://assets/JDSherbert-PixelExplosionsSFXPackFree/JDSherbert - Pixel Explosions SFX Pack - Flashbang (2).ogg" id="8_qbo1m"]
[ext_resource type="AudioStream" uid="uid://bgp6bwxi2mgoc" path="res://assets/Shapeforms Audio Free Sound Effects/Hit and Punch Preview/WHOOSH_ARM_SWING_01.wav" id="9_kh31v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dbob3"]
radius = 36.0

[sub_resource type="CircleShape2D" id="CircleShape2D_u2ds8"]
radius = 42.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1msfx"]
radius = 360.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xc3d4"]
radius = 42.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kh31v"]

[node name="DashingEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_xc3d4")
dash_attack_distance = 500.0
follow_distance = 200.0
damage_text_node = ExtResource("2_ijalk")
hurt_shader = ExtResource("3_tc80p")
death_shader = ExtResource("4_hlsnw")
hp_ui_view_node = ExtResource("5_oqkmh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_dbob3")
debug_color = Color(1, 0.655003, 0.237995, 0.42)

[node name="DamageTextRoot" type="Node2D" parent="."]
z_index = 20
z_as_relative = false
position = Vector2(0, -122)

[node name="UIRoot" type="Node2D" parent="."]
position = Vector2(-49, -93)

[node name="DebugTextRoot" type="Node2D" parent="."]
position = Vector2(0, 46)

[node name="AIStateLabel" type="Label" parent="DebugTextRoot"]
offset_right = 40.0
offset_bottom = 23.0
theme = ExtResource("5_ijalk")
text = "IDLE"

[node name="HitArea" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
shape = SubResource("CircleShape2D_u2ds8")

[node name="DetectionArea" type="Area2D" parent="."]
collision_mask = 3
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_1msfx")
debug_color = Color(0.949586, 2.88785e-06, 0.572767, 0.42)

[node name="AttackArea" type="Area2D" parent="."]
collision_mask = 3
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_xc3d4")
debug_color = Color(0.268192, 0.633042, 3.85046e-07, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_kh31v")
texture = ExtResource("6_ijalk")

[node name="AimLine" type="Line2D" parent="."]
width = 2.0

[node name="DashLine" type="Line2D" parent="."]
width = 2.0
default_color = Color(0.984577, 0, 0.328501, 1)

[node name="hurt_timer" type="Timer" parent="."]
one_shot = true

[node name="death_timer" type="Timer" parent="."]
process_callback = 0
wait_time = 1.25
one_shot = true

[node name="debuff_timer" type="Timer" parent="."]
one_shot = true

[node name="debuff_frequency_timer" type="Timer" parent="."]

[node name="gravity_timer" type="Timer" parent="."]
process_callback = 0
wait_time = 3.0
one_shot = true

[node name="dash_attack_timer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="cooldown_timer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="root_timer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="slow_timer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="hurt_audio_player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_w8c1s")
volume_db = 12.0
pitch_scale = 2.0

[node name="death_audio_player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_qbo1m")
volume_db = 6.0
pitch_scale = 2.0

[node name="dash_audio_player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_kh31v")
volume_db = 12.0
